openshift/dev/06-daemon-postgres-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: daemon-postgres-dev
  labels:
    app.kubernetes.io/name: daemon-postgres
    app.kubernetes.io/environment: dev
spec:
  selector:
    app.kubernetes.io/name: daemon-postgres
    app.kubernetes.io/environment: dev
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
