openshift/dev/11-rules-daemon-health-route-dev.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rules-enrichment-daemon-health-dev
  labels:
    app.kubernetes.io/name: rules-enrichment-daemon
    app.kubernetes.io/environment: dev
spec:
  to:
    kind: Service
    name: rules-enrichment-daemon-health-dev
  port:
    targetPort: http-health
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
